# mbot_perception_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: MappedObject3D.msg  MappedObject3DList.msg  RecognizedObject2D.msg  RecognizedObject2DList.msg  RecognizedObject3D.msg  RecognizedObject3DList.msg  RecognizedObjectWithId3D.msg  RecognizedObjectWithId3DList.msg  TrackPerson.msg  TrackedObject3D.msg
srv/: DeleteObject3D.srv  GetObjectsMap3D.srv
